--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0px;
 }
 
+h1{
+    text-decoration: underline;
+}
+
 body, #resposta{
     background-color: rgb(45, 100, 45);
     color: white;
@@ -23,7 +27,7 @@ input, button, select{
 }
 
 #resposta{
-    /* font-size: 12rem; */
+    font-size: 1.8rem;
     margin-top: 12px;
 }
 
