--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
 }
 
 h1{
-    text-decoration: underline;
+    text-decoration: underline 1px;
 }
 
 body, #resposta{
-    background-color: rgb(45, 100, 45);
+    background-color: rgb(33, 97, 94);
     color: white;
     font-size: 1.1rem;
     text-align: center;
